2007-04-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoPermissions.m: added "SOGoRole_ObjectViewer"
	and "SOGoRole_ObjectEditor".

	* UI/Common/UIxUserRightsEditor.m ([UIxUserRightsEditor
	-prepareRightsForm]): this method is no longer mandatory.

	* UI/Contacts/UIxContactsUserRightsEditor.m
	([UIxContactsUserRightsEditor
	-setUserCanCreateObjects:userCanCreateObjects]): new subclass
	module to handle acls related to the address books. Partial
	implementation.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	-setRoles:rolesforUser:uidforObjectAtPath:objectPathArray]): cache
	newly set roles.
	([SOGoFolder
	-removeAclsForUsers:usersforObjectAtPath:objectPathArray]): remove
	specified roles from cache.
	([SOGoFolder -aclsForUser:uidforObjectAtPath:objectPathArray]):
	put resulting roles in cache.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -init]): do not invoke
	initWithName:inContainer:. Instead, directly initialize the ivars
	as it is supposed to be to avoid an infinite loop whenever one of
	those two methods are overriden.

	* SoObjects/SOGo/SOGoContentObject.m ([-rolesOfUser:login]):
	removed method.

	* SoObjects/Contacts/SOGoContactLDAPEntry.m ([SOGoContactLDAPEntry
	-aclsForUser:uid]): override method so that SOGo won't crash when
	loading the contact card.

2007-04-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -_privacySqlString]): the string for the
	"freebusy" special user should only require opaque elements.

2007-04-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -davResourceType]): fixed a problem with
	our double declaration where the resulting XML would be screwed.
	There is only one collection per namespace.

	* SoObjects/SOGo/NSCalendarDate+SOGo.m ([NSCalendarDate
	rfc822DateString]): new method that returns a string conform to
	rfc 822 and suitable for email headers.
