@@ -1,3 +1,10 @@
+2007-05-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
+	-primaryFetchProfile]): the values returned from the database are
+	converted to a put dictionary first, since the dictionary returned
+	is actually an immutable one, which can cause a crash afterwards.
+
 2007-04-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* SoObjects/SOGo/SOGoPermissions.m: added "SOGoRole_ObjectViewer"
